--- a/src/app/components/get-started/get-started.component.html
+++ b/src/app/components/get-started/get-started.component.html
@@ -14,4 +14,4 @@
     </div>
     <img class="bg-img" src="assets/images/start-bg.png" alt="" />
 </div>
-<a class="legal-notice-link" routerLink="/legal-notice" target="_blank">Imprint <span>|</span> Privacy Policy</a>
+<a class="legal-notice-link" routerLink="/legal-notice" target="_blank">Imprint <span>|</span> Privacy policy</a>
