style alignment of the sign up page

--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -1,6 +1,9 @@
 <div class="component-wrapper">
     <div class="sign-up-container">
-        <h1>First enter your email</h1>
+        <h1>
+            Slack-Clone registration
+            <img class="logo" src="./../../assets/images/logo.svg" alt="Logo" />
+        </h1>
         <span> We suggest using the email address that you use at work.</span>
         <form class="form" [formGroup]="signUpForm" (submit)="onSubmit()" ngNativeValidate>
             <mat-form-field appearance="outline">
