--- a/src/app/components/sign-up/sign-up.component.scss
+++ b/src/app/components/sign-up/sign-up.component.scss
@@ -2,8 +2,14 @@ h1 {
     font-size: 48px;
     font-weight: 700;
     letter-spacing: -0.75px;
+    display: flex;
     line-height: 46px;
-    text-align: center;
+    align-items: center;
+}
+
+.logo {
+    height: 50px;
+    margin-left: 12px;
 }
 
 .component-wrapper {
