major refactoring and restyling auth pages

--- a/src/app/components/get-started/get-started.component.html
+++ b/src/app/components/get-started/get-started.component.html
@@ -9,7 +9,7 @@
             <h1>Bring's your the team together. <br />Wherever you are.</h1>
         </div>
         <div class="left-botom">
-            <button class="width-25vw secondary-btn" mat-raised-button routerLink="/sign-up" color="signup-button">Sign Up</button>
+            <button class="width-25vw sec-btn" mat-raised-button routerLink="/sign-up" color="signup-button">Sign Up</button>
         </div>
     </div>
     <img class="bg-img" src="assets/images/start-bg.png" alt="" />
