--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -4,8 +4,8 @@
             Slack-Clone registration
             <img class="logo" src="./../../assets/images/logo.svg" alt="Logo" />
         </h1>
-        <span> We suggest using the email address that you use at work.</span>
-        <form class="form" [formGroup]="signUpForm" (submit)="onSubmit()" ngNativeValidate>
+        <span>We suggest using the email address that you use at work.</span>
+        <form [formGroup]="signUpForm" (submit)="onSubmit()" ngNativeValidate>
             <mat-form-field appearance="outline">
                 <mat-label>Display Name</mat-label>
                 <input type="text" matInput #userDisplayName required formControlName="userDisplayName" />
@@ -19,15 +19,18 @@
                 <mat-label>Password</mat-label>
                 <input type="password" matInput #userPwd required type="password" formControlName="password" />
             </mat-form-field>
-            <button class="width-25vw primary-btn" mat-raised-button (click)="onSubmit()">Sign Up</button>
+            <div class="form-actions">
+                <button class="width-25vw prim-btn" mat-raised-button (click)="onSubmit()">Sign up</button>
+                <button class="sec-btn" mat-raised-button (click)="this.openGuestUserDialog()">Try as guest</button>
+            </div>
         </form>
 
-        <p>OR</p>
+        <span>OR</span>
         <div>
-            <button class="width-25vw google-login" mat-stroked-button id="googleLogin" (click)="authService.googleAuth()"><img class="google-icon" src="assets/images/googleicon.png" alt="Google Icon" />Continue with Google</button>
+            <button class="google-login" mat-stroked-button id="googleLogin" (click)="authService.googleAuth()"><img class="google-icon" src="assets/images/googleicon.png" alt="Google Icon" />Continue with Google</button>
         </div>
         <div class="to-sign-in">
-            <p>Already using Slack-Clone?</p>
+            <span>Already using Slack-Clone?</span>
             <a class="auth-link" (click)="this.utils.redirectToLogin()" [routerLink]="['/sign-up']" routerLinkActive="router-link-active">Sign in to an existing worksapce</a>
         </div>
     </div>
