--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,184 +2,181 @@
 
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 :root {
-  // Material design
-  --md-primary-col: #3f51b5;
-  --md-accent-col: #ff4081;
-  --md-warn-col: #f44a3e;
-  // Custom
-  --error-col: #f7c600;
-  --primary-col: #541554;
-  --secondary-col: #007a5a;
+    // Material design
+    --md-primary-col: #3f51b5;
+    --md-accent-col: #ff4081;
+    --md-warn-col: #f44a3e;
+    // Custom
+    --error-col: #f7c600;
+    --primary-col: #541554;
+    --secondary-col: #007a5a;
 }
 
-.primary-btn {
-  background-color: #4a154b;
-  color: white;
-  &:hover {
-    background-color: #611f69e6;
-  }
+.prim-btn {
+    background-color: #4a154b;
+    color: white;
+    &:hover {
+        background-color: #611f69e6;
+    }
 }
 
-.secondary-btn {
-  background-color: #007a5a;
-  color: white;
-  &:hover {
-    background-color: #009b71;
-  }
+.sec-btn {
+    background-color: #007a5a;
+    color: white;
+    &:hover {
+        background-color: #009b71;
+    }
 }
 
 .auth-link {
-  cursor: pointer;
-  text-decoration: none;
-  color: #1264a3;
-  &:hover {
-    text-decoration: underline;
-  }
+    cursor: pointer;
+    text-decoration: none;
+    color: #1264a3;
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .width-25vw {
-  width: 25vw;
-  min-width: 230px;
+    width: 25vw;
+    min-width: 230px;
 }
 
 // Material Icons
-
 @font-face {
-  font-family: "Material Icons";
-  font-style: normal;
-  font-weight: 400;
-  src: url("assets/fonts/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2") format("woff2");
+    font-family: "Material Icons";
+    font-style: normal;
+    font-weight: 400;
+    src: url("assets/fonts/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2") format("woff2");
 }
 
 .material-icons {
-  font-family: "Material Icons";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -moz-font-feature-settings: "liga";
-  -moz-osx-font-smoothing: grayscale;
+    font-family: "Material Icons";
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -moz-font-feature-settings: "liga";
+    -moz-osx-font-smoothing: grayscale;
 }
 
+
 /* roboto-100 - latin */
+
 @font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 100;
-  src: url("assets/fonts/roboto-v30-latin-100.eot"); /* IE9 Compat Modes */
-  src: local(""),
-    url("assets/fonts/roboto-v30-latin-100.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("assets/fonts/roboto-v30-latin-100.woff2") format("woff2"),
-    /* Super Modern Browsers */ url("assets/fonts/roboto-v30-latin-100.woff")
-      format("woff"),
-    /* Modern Browsers */ url("assets/fonts/roboto-v30-latin-100.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("assets/fonts/roboto-v30-latin-100.svg#Roboto") format("svg"); /* Legacy iOS */
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 100;
+    src: url("assets/fonts/roboto-v30-latin-100.eot");
+    /* IE9 Compat Modes */
+    src: local(""), url("assets/fonts/roboto-v30-latin-100.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("assets/fonts/roboto-v30-latin-100.woff2") format("woff2"), /* Super Modern Browsers */
+    url("assets/fonts/roboto-v30-latin-100.woff") format("woff"), /* Modern Browsers */
+    url("assets/fonts/roboto-v30-latin-100.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("assets/fonts/roboto-v30-latin-100.svg#Roboto") format("svg");
+    /* Legacy iOS */
 }
+
+
 /* roboto-300 - latin */
+
 @font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 300;
-  src: url("assets/fonts/roboto-v30-latin-300.eot"); /* IE9 Compat Modes */
-  src: local(""),
-    url("assets/fonts/roboto-v30-latin-300.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("assets/fonts/roboto-v30-latin-300.woff2") format("woff2"),
-    /* Super Modern Browsers */ url("assets/fonts/roboto-v30-latin-300.woff")
-      format("woff"),
-    /* Modern Browsers */ url("assets/fonts/roboto-v30-latin-300.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("assets/fonts/roboto-v30-latin-300.svg#Roboto") format("svg"); /* Legacy iOS */
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 300;
+    src: url("assets/fonts/roboto-v30-latin-300.eot");
+    /* IE9 Compat Modes */
+    src: local(""), url("assets/fonts/roboto-v30-latin-300.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("assets/fonts/roboto-v30-latin-300.woff2") format("woff2"), /* Super Modern Browsers */
+    url("assets/fonts/roboto-v30-latin-300.woff") format("woff"), /* Modern Browsers */
+    url("assets/fonts/roboto-v30-latin-300.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("assets/fonts/roboto-v30-latin-300.svg#Roboto") format("svg");
+    /* Legacy iOS */
 }
+
+
 /* roboto-regular - latin */
+
 @font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  src: url("assets/fonts/roboto-v30-latin-regular.eot"); /* IE9 Compat Modes */
-  src: local(""),
-    url("assets/fonts/roboto-v30-latin-regular.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("assets/fonts/roboto-v30-latin-regular.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */
-      url("assets/fonts/roboto-v30-latin-regular.woff") format("woff"),
-    /* Modern Browsers */ url("assets/fonts/roboto-v30-latin-regular.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("assets/fonts/roboto-v30-latin-regular.svg#Roboto") format("svg"); /* Legacy iOS */
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    src: url("assets/fonts/roboto-v30-latin-regular.eot");
+    /* IE9 Compat Modes */
+    src: local(""), url("assets/fonts/roboto-v30-latin-regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("assets/fonts/roboto-v30-latin-regular.woff2") format("woff2"), /* Super Modern Browsers */
+    url("assets/fonts/roboto-v30-latin-regular.woff") format("woff"), /* Modern Browsers */
+    url("assets/fonts/roboto-v30-latin-regular.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("assets/fonts/roboto-v30-latin-regular.svg#Roboto") format("svg");
+    /* Legacy iOS */
 }
+
+
 /* roboto-500 - latin */
+
 @font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 500;
-  src: url("assets/fonts/roboto-v30-latin-500.eot"); /* IE9 Compat Modes */
-  src: local(""),
-    url("assets/fonts/roboto-v30-latin-500.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("assets/fonts/roboto-v30-latin-500.woff2") format("woff2"),
-    /* Super Modern Browsers */ url("assets/fonts/roboto-v30-latin-500.woff")
-      format("woff"),
-    /* Modern Browsers */ url("assets/fonts/roboto-v30-latin-500.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("assets/fonts/roboto-v30-latin-500.svg#Roboto") format("svg"); /* Legacy iOS */
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    src: url("assets/fonts/roboto-v30-latin-500.eot");
+    /* IE9 Compat Modes */
+    src: local(""), url("assets/fonts/roboto-v30-latin-500.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("assets/fonts/roboto-v30-latin-500.woff2") format("woff2"), /* Super Modern Browsers */
+    url("assets/fonts/roboto-v30-latin-500.woff") format("woff"), /* Modern Browsers */
+    url("assets/fonts/roboto-v30-latin-500.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("assets/fonts/roboto-v30-latin-500.svg#Roboto") format("svg");
+    /* Legacy iOS */
 }
+
+
 /* roboto-700 - latin */
+
 @font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  src: url("assets/fonts/roboto-v30-latin-700.eot"); /* IE9 Compat Modes */
-  src: local(""),
-    url("assets/fonts/roboto-v30-latin-700.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("assets/fonts/roboto-v30-latin-700.woff2") format("woff2"),
-    /* Super Modern Browsers */ url("assets/fonts/roboto-v30-latin-700.woff")
-      format("woff"),
-    /* Modern Browsers */ url("assets/fonts/roboto-v30-latin-700.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("assets/fonts/roboto-v30-latin-700.svg#Roboto") format("svg"); /* Legacy iOS */
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    src: url("assets/fonts/roboto-v30-latin-700.eot");
+    /* IE9 Compat Modes */
+    src: local(""), url("assets/fonts/roboto-v30-latin-700.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("assets/fonts/roboto-v30-latin-700.woff2") format("woff2"), /* Super Modern Browsers */
+    url("assets/fonts/roboto-v30-latin-700.woff") format("woff"), /* Modern Browsers */
+    url("assets/fonts/roboto-v30-latin-700.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("assets/fonts/roboto-v30-latin-700.svg#Roboto") format("svg");
+    /* Legacy iOS */
 }
+
+
 /* roboto-900 - latin */
+
 @font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 900;
-  src: url("assets/fonts/roboto-v30-latin-900.eot"); /* IE9 Compat Modes */
-  src: local(""),
-    url("assets/fonts/roboto-v30-latin-900.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("assets/fonts/roboto-v30-latin-900.woff2") format("woff2"),
-    /* Super Modern Browsers */ url("assets/fonts/roboto-v30-latin-900.woff")
-      format("woff"),
-    /* Modern Browsers */ url("assets/fonts/roboto-v30-latin-900.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("assets/fonts/roboto-v30-latin-900.svg#Roboto") format("svg"); /* Legacy iOS */
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 900;
+    src: url("assets/fonts/roboto-v30-latin-900.eot");
+    /* IE9 Compat Modes */
+    src: local(""), url("assets/fonts/roboto-v30-latin-900.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("assets/fonts/roboto-v30-latin-900.woff2") format("woff2"), /* Super Modern Browsers */
+    url("assets/fonts/roboto-v30-latin-900.woff") format("woff"), /* Modern Browsers */
+    url("assets/fonts/roboto-v30-latin-900.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("assets/fonts/roboto-v30-latin-900.svg#Roboto") format("svg");
+    /* Legacy iOS */
 }
