update scss class names

--- a/src/app/components/dialog-delete-user/dialog-delete-user.component.html
+++ b/src/app/components/dialog-delete-user/dialog-delete-user.component.html
@@ -6,6 +6,6 @@
     <p>Are you sure you want to delete the current user?</p>
 </div>
 <div mat-dialog-actions>
-    <button (click)="this.dialogRef.close()" mat-button class="primary-btn">Cancel</button>
+    <button (click)="this.dialogRef.close()" mat-button class="prim-btn">Cancel</button>
     <button (click)="this.authService.deleteUser(); this.dialogRef.close()" color="warn" mat-raised-button>Delete</button>
 </div>
