--- a/src/app/components/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/components/dialog-edit-user/dialog-edit-user.component.html
@@ -12,5 +12,5 @@
 </div>
 <div mat-dialog-actions>
     <button (click)="this.openDeleteUserDialog(); this.dialogRef.close()" mat-raised-button color="warn">Delete user</button>
-    <button (click)="this.authService.changeDisplayName(this.authService.newDisplayName);this.dialogRef.close()" class="primary-btn" mat-button>Save</button>
+    <button (click)="this.authService.changeDisplayName(this.authService.newDisplayName);this.dialogRef.close()" class="prim-btn" mat-button>Save</button>
 </div>
