--- a/src/app/components/dialog-guest-user/dialog-guest-user.component.html
+++ b/src/app/components/dialog-guest-user/dialog-guest-user.component.html
@@ -7,6 +7,6 @@
         <input formControlName="name" type="text" matInput required />
     </mat-form-field><br />
     <div class="form-actions">
-        <button class="primary-btn" (click)="onSubmit()" type="submit" mat-raised-button>Login</button>
+        <button class="prim-btn" (click)="onSubmit()" type="submit" mat-raised-button>Login</button>
     </div>
 </form>
