--- a/src/app/components/dialog-add-channel/dialog-add-channel.component.html
+++ b/src/app/components/dialog-add-channel/dialog-add-channel.component.html
@@ -6,5 +6,5 @@
     </mat-form-field>
 </div>
 <div mat-dialog-actions>
-    <button class="primary-btn" [disabled]="name.value == ''" mat-raised-button (click)="createChannel()">Create</button>
+    <button class="prim-btn" [disabled]="name.value == ''" mat-raised-button (click)="createChannel()">Create</button>
 </div>
