--- a/src/app/components/dialog-edit-message/dialog-edit-message.component.html
+++ b/src/app/components/dialog-edit-message/dialog-edit-message.component.html
@@ -6,5 +6,5 @@
     </mat-form-field>
 </div>
 <div mat-dialog-actions>
-    <button class="primary-btn" mat-raised-button (click)="this.firestoreService.deleteAllMessagesOfChat(); this.firestoreService.saveMessage(); this.dialogRef.close()">Save</button>
+    <button class="prim-btn" mat-raised-button (click)="this.firestoreService.deleteAllMessagesOfChat(); this.firestoreService.saveMessage(); this.dialogRef.close()">Save</button>
 </div>
