--- a/src/app/components/dialog-forgot-password/dialog-forgot-password.component.html
+++ b/src/app/components/dialog-forgot-password/dialog-forgot-password.component.html
@@ -8,7 +8,7 @@
         <mat-label>Email</mat-label>
         <input type="email" matInput #passwordResetEmail formControlName="email" required /> </mat-form-field><br />
     <div class="form-actions">
-        <button class="primary-btn" type="submit" mat-raised-button>Reset Password</button>
+        <button class="prim-btn" type="submit" mat-raised-button>Reset Password</button>
         <button (click)="this.dialog.close()" mat-raised-button>Close</button>
     </div>
 </form>
