renamed btn on get-started component

--- a/src/app/components/get-started/get-started.component.html
+++ b/src/app/components/get-started/get-started.component.html
@@ -9,9 +9,9 @@
             <h1>Bring's your the team together. <br />Wherever you are.</h1>
         </div>
         <div class="left-botom">
-            <button class="width-25vw sec-btn" mat-raised-button routerLink="/sign-up" color="signup-button">Sign Up</button>
+            <button class="sec-btn" mat-raised-button routerLink="/sign-up" color="signup-button">Start with Slack-Clone</button>
         </div>
     </div>
-    <img class="bg-img" src="assets/images/start-bg.png" alt="" />
+    <img class="bg-img" src="assets/images/start-bg.png" alt="Start background image" />
 </div>
 <a class="legal-notice-link" routerLink="/legal-notice" target="_blank">Imprint <span>|</span> Privacy policy</a>
