minor style improvements to auth pages part 2

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
             </mat-form-field>
             <div class="form-actions">
                 <div class="login-btn-wrapper">
-                    <button type="submit" class="width-25vw prim-btn login-btn" mat-raised-button>Login
+                    <button type="submit" class="prim-btn login-btn" mat-raised-button>Login
                     <a (click)="this.openForgotPasswordDialog()" class="auth-link">Forgot Password?</a>
                     </button>
                 </div>
