--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -19,7 +19,7 @@
                 <input type="password" matInput #userPwd required type="password" formControlName="password" />
             </mat-form-field>
             <div class="form-actions">
-                <button class="width-25vw prim-btn" mat-raised-button (click)="onSubmit()">Sign up</button>
+                <button class="prim-btn" mat-raised-button (click)="onSubmit()">Sign up</button>
                 <button class="sec-btn" mat-raised-button (click)="this.openGuestUserDialog()">Try as guest</button>
             </div>
         </form>
