--- a/src/app/components/channels/channels.component.html
+++ b/src/app/components/channels/channels.component.html
@@ -1,12 +1,11 @@
 <div class="chatroom">
     <h2># {{ this.firestoreService.channel.channelName }}</h2>
-
     <div #scrollContainer class="massages" id="messageBox">
         <div *ngIf="this.firestoreService.messages.length == 0 && this.firestoreService.filteredMessages.length == 0" class="no-messages-container">
             <i style="color: var(--primary-col)" class="material-icons">error</i>
             <h3>Here are no messages yet.</h3>
         </div>
-        <div *ngIf="this.firestoreService.filteredMessages.length == 0 && this.utilService.isFiltered" class="no-messages-container">
+        <div *ngIf="this.firestoreService.filteredMessages.length == 0 && this.utilService.isFiltered && this.firestoreService.messages.length != 0" class="no-messages-container">
             <i style="color: var(--primary-col)" class="material-icons">error</i>
             <h3>No messages found.</h3>
         </div>
@@ -17,7 +16,6 @@
                 <div class="post-headline">
                     <img class="profile" src="{{ message.photoURL }}" alt="{{ message.displayName }}" />
                     <span>{{ message.displayName }}</span>
-
                     <button *ngIf="message.uid == this.authService.userData.uid" mat-icon-button class="pin-right-upper-corner" [matMenuTriggerFor]="userMenu">
                         <mat-icon>more_vert</mat-icon>
                     </button>
@@ -63,7 +61,6 @@
             </mat-card>
         </ng-container>
     </div>
-
     <form [formGroup]="messageForm" (submit)="onSubmit()" class="message-container">
         <mat-form-field appearance="fill">
             <mat-label>Your Message</mat-label>
