--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -9,12 +9,10 @@
             <details open>
                 <summary>Channels</summary>
                 <ul>
-                    <li [routerLink]="['/chat/welcome']" routerLinkActive="router-link-active" (click)="this.toggleNav()">
+                    <li [routerLink]="['/main/welcome']" routerLinkActive="router-link-active" (click)="this.toggleNav()">
                         <span># welcome</span>
                     </li>
-                    <li *ngFor="let channel of this.firestoreService.allChannels" (click)="
-              openChat('/chat/ch/', channel.customIdName); this.toggleNav()
-            ">
+                    <li *ngFor="let channel of this.firestoreService.allChannels" (click)="openChat('/main/ch/', channel.customIdName); this.toggleNav()">
                         <span># {{ channel.channelName }}</span>
                     </li>
                     <li (click)="openCreateChannelDialog()">
@@ -24,18 +22,14 @@
                 </ul>
             </details>
 
-            <div class="guest-user-dm-container" *ngIf="
-          this.authService.userData && this.authService.userData.isAnonymous
-        ">
+            <div class="guest-user-dm-container" *ngIf="this.authService.userData && this.authService.userData.isAnonymous">
                 <span>Direct messages</span>
                 <span class="only-registered-users">(Only for registered users)</span>
             </div>
-            <details open *ngIf="
-          this.authService.userData && !this.authService.userData.isAnonymous
-        ">
+            <details open *ngIf="this.authService.userData && !this.authService.userData.isAnonymous">
                 <summary>Direct messages</summary>
                 <ul>
-                    <li *ngFor="let user of this.firestoreService.allOtherUsers" (click)="openDirectMessage('/chat/dm/', user.uid); this.toggleNav()">
+                    <li *ngFor="let user of this.firestoreService.allOtherUsers" (click)="openDirectMessage('/main/dm/', user.uid); this.toggleNav()">
                         <span>{{ user.displayName }}</span>
                     </li>
                 </ul>
@@ -45,61 +39,41 @@
                 <mat-icon>logout</mat-icon>Log Out
             </li>
         </ul>
-        <a class="legal-notice-link" routerLink="/legal-notice" target="_blank">Imprint <span>|</span> Privacy policy</a
-    >
-  </mat-drawer>
+        <a class="legal-notice-link" routerLink="/legal-notice" target="_blank">Imprint <span>|</span> Privacy policy</a>
+    </mat-drawer>
 
-  <div class="example-sidenav-content">
-    <mat-toolbar class="header">
-      <mat-toolbar-row>
-        <div class="header-left">
-          <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
-          <input
-            *ngIf="this.utilService.searchBarActivated"
-            name="search"
-            type="text"
-            placeholder="Search messages or users"
-            matInput
-            autocomplete="on"
-            class="search_field hide_mobile"
-            (keyup)="filterMessages(searchValue.value)"
-            #searchValue
-            [(ngModel)]="this.utilService.searchInput"
-          />
-        </div>
-        <div *ngIf="authService.userData as user" class="user-container">
-          <span class="user-name">{{ user.displayName }}</span>
-          <button mat-button [matMenuTriggerFor]="menu">
-            <img
-              class="profile-picture"
-              src="{{
-                user.photoURL
-                  ? user.photoURL
-                  : './../../../assets/images/blank_user.svg'
-              }}"
-              alt="{{ user.displayName }}"
-            />
-          </button>
-        </div>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="this.openAccountDialog()">
-            <mat-icon>person</mat-icon>
-            <span>Show user details</span>
-          </button>
-          <button mat-menu-item (click)="this.openEditUserDialog()">
-            <mat-icon>edit</mat-icon>
-            <span>Edit user</span>
-          </button>
-          <button mat-menu-item (click)="this.authService.logOut()">
-            <mat-icon>logout</mat-icon>
-            <span>Log Out</span>
-          </button>
-        </mat-menu>
-      </mat-toolbar-row>
-    </mat-toolbar>
+    <div class="example-sidenav-content">
+        <mat-toolbar class="header">
+            <mat-toolbar-row>
+                <div class="header-left">
+                    <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
+                    <input *ngIf="this.utilService.searchBarActivated" name="search" type="text" placeholder="Search in current chat" matInput autocomplete="on" class="search_field hide_mobile" (keyup)="filterMessages(searchValue.value)" #searchValue [(ngModel)]="this.utilService.searchInput">
+                </div>
+                <div *ngIf="authService.userData as user" class="user-container">
+                    <span class="user-name">{{ user.displayName }}</span>
+                    <button mat-button [matMenuTriggerFor]="menu">
+                        <img class="profile-picture"src="{{ user.photoURL ? user.photoURL : './../../../assets/images/blank_user.svg' }}" alt="{{ user.displayName }}"/>
+                    </button>
+                </div>
+                <mat-menu #menu="matMenu">
+                    <button mat-menu-item (click)="this.openAccountDialog()">
+                        <mat-icon>person</mat-icon>
+                        <span>Show user details</span>
+                    </button>
+                    <button mat-menu-item (click)="this.openEditUserDialog()">
+                        <mat-icon>edit</mat-icon>
+                        <span>Edit user</span>
+                    </button>
+                    <button mat-menu-item (click)="this.authService.logOut()">
+                        <mat-icon>logout</mat-icon>
+                        <span>Log Out</span>
+                    </button>
+                </mat-menu>
+            </mat-toolbar-row>
+        </mat-toolbar>
 
-    <div class="router-container">
-      <router-outlet></router-outlet>
+        <div class="router-container">
+            <router-outlet></router-outlet>
+        </div>
     </div>
-  </div>
 </mat-drawer-container>
