--- a/src/app/components/channels/channels.component.html
+++ b/src/app/components/channels/channels.component.html
@@ -1,33 +1,41 @@
 <div class="chatroom">
     <h2># {{ this.firestoreService.channel.channelName }}</h2>
     <div #scrollContainer class="massages" id="messageBox">
-        <div *ngIf="this.firestoreService.messages.length == 0 && this.firestoreService.filteredMessages.length == 0" class="no-messages-container">
+        <div *ngIf="
+        this.firestoreService.messages.length == 0 &&
+        this.firestoreService.filteredMessages.length == 0
+      " class="no-messages-container">
             <i style="color: var(--primary-col)" class="material-icons">error</i>
             <h3>Here are no messages yet.</h3>
         </div>
-        <div *ngIf="this.firestoreService.filteredMessages.length == 0 && this.utilService.isFiltered && this.firestoreService.messages.length != 0" class="no-messages-container">
+        <div *ngIf="
+        this.firestoreService.filteredMessages.length == 0 &&
+        this.utilService.isFiltered &&
+        this.firestoreService.messages.length != 0
+      " class="no-messages-container">
             <i style="color: var(--primary-col)" class="material-icons">error</i>
             <h3>No messages found.</h3>
         </div>
         <ng-container *ngIf="
         this.firestoreService.filteredMessages.length == 0 &&
-        !this.utilService.isFiltered">
+        !this.utilService.isFiltered
+      ">
             <mat-card class="message" *ngFor="let message of this.firestoreService.messages">
                 <div class="post-headline">
                     <img class="profile" src="{{ message.photoURL }}" alt="{{ message.displayName }}" />
                     <span>{{ message.displayName }}</span>
                     <button *ngIf="message.uid == this.authService.userData.uid" mat-icon-button class="pin-right-upper-corner" [matMenuTriggerFor]="userMenu">
-                        <mat-icon>more_vert</mat-icon>
-                    </button>
+            <mat-icon>more_vert</mat-icon>
+          </button>
                     <mat-menu #userMenu="matMenu">
                         <button mat-menu-item (click)="this.dialogEditMessage(message)">
-                            <mat-icon>edit</mat-icon>
-                            <span>Edit</span>
-                        </button>
+              <mat-icon>edit</mat-icon>
+              <span>Edit</span>
+            </button>
                         <button mat-menu-item (click)="this.dialogDeleteMessage(message)">
-                            <mat-icon>delete</mat-icon>
-                            <span>Delete</span>
-                        </button>
+              <mat-icon>delete</mat-icon>
+              <span>Delete</span>
+            </button>
                     </mat-menu>
                 </div>
                 <div>
@@ -40,19 +48,18 @@
                 <div class="post-headline">
                     <img class="profile" src="{{ message.photoURL }}" alt="{{ message.displayName }}" />
                     <span>{{ message.displayName }}</span>
-
                     <button *ngIf="message.uid == this.authService.userData.uid" mat-icon-button class="pin-right-upper-corner" [matMenuTriggerFor]="userMenu">
-                        <mat-icon>more_vert</mat-icon>
-                    </button>
+            <mat-icon>more_vert</mat-icon>
+          </button>
                     <mat-menu #userMenu="matMenu">
                         <button mat-menu-item (click)="this.dialogEditMessage(message)">
-                            <mat-icon>edit</mat-icon>
-                            <span>Edit</span>
-                        </button>
+              <mat-icon>edit</mat-icon>
+              <span>Edit</span>
+            </button>
                         <button mat-menu-item (click)="this.dialogDeleteMessage(message)">
-                            <mat-icon>delete</mat-icon>
-                            <span>Delete</span>
-                        </button>
+              <mat-icon>delete</mat-icon>
+              <span>Delete</span>
+            </button>
                     </mat-menu>
                 </div>
                 <div>
@@ -62,12 +69,11 @@
         </ng-container>
     </div>
     <form [formGroup]="messageForm" (submit)="onSubmit()" class="message-container">
-        <mat-form-field appearance="fill">
-            <mat-label>Your Message</mat-label>
-            <textarea onkeydown="if (event.keyCode == 13) { this.form.requestSubmit(); return false; }" formControlName="message" minlength="1" #messageInput matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="10"></textarea>
-        </mat-form-field>
+        <label for="editor">Your message</label>
+        <quill-editor></quill-editor>
+        <textarea onkeydown="if (event.keyCode == 13) { this.form.requestSubmit(); return false; }" formControlName="message" minlength="1" #messageInput matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="10"></textarea>
         <button [disabled]="messageInput.value == ''" [ngClass]="{ 'prim-btn': messageInput.value != '' }" type="submit" mat-raised-button>
-            Post
-        </button>
+      Post
+    </button>
     </form>
 </div>
