disable links from quill toolbar

--- a/src/app/components/channels/channels.component.html
+++ b/src/app/components/channels/channels.component.html
@@ -80,7 +80,7 @@
                     </select>
                 </span>
                 <span class="ql-formats">
-                    <button class="ql-link"></button>
+                    <!-- <button class="ql-link"></button> -->
                     <button class="ql-image"></button>
                 </span>
             </div>
