--- a/src/app/components/channels/channels.component.html
+++ b/src/app/components/channels/channels.component.html
@@ -72,12 +72,12 @@
                 <span class="ql-formats">
                     <button class="ql-list" value="ordered"></button>
                     <button class="ql-list" value="bullet"></button>
-                    <select class="ql-align">
+                    <!-- <select class="ql-align">
                         <option selected></option>
                         <option value="center"></option>
                         <option value="right"></option>
                         <option value="justify"></option>
-                    </select>
+                    </select> -->
                 </span>
                 <span class="ql-formats">
                     <button class="ql-link"></button>
