--- a/src/app/components/channels/channels.component.scss
+++ b/src/app/components/channels/channels.component.scss
@@ -66,6 +66,24 @@
     }
 }
 
+._ngcontent-urv-c142 {
+    img {
+        max-width: 500px;
+        max-height: 500px;
+        object-fit: cover;
+    }
+}
+
+.has-image {
+    max-width: 500px;
+    max-height: 500px;
+    object-fit: cover;
+}
+
+.submit-btn {
+    margin-top: 18px;
+}
+
 .d-none {
     display: none;
 }
