--- a/src/app/components/channels/channels.component.html
+++ b/src/app/components/channels/channels.component.html
@@ -28,10 +28,7 @@
                             </button>
                     </mat-menu>
                 </div>
-                <div class="message-field" [innerHTML]="message.message">
-                    <!--[innerHTML]= Doesn't show as HTML-Tag -->
-                    {{ message.message }}
-                </div>
+                <quill-view [sanitize]="true" [content]="message.message" theme="snow"></quill-view>
             </mat-card>
         </ng-container>
         <ng-container *ngIf="this.firestoreService.filteredMessages.length !== 0">
@@ -61,31 +58,9 @@
         </ng-container>
     </div>
     <form [formGroup]="messageForm" (submit)="onSubmit()" class="message-container">
-        <label for="editor">Your message</label>
-        <quill-editor formControlName="message" minlength="1" #messageInput matInput>
-            <div quill-editor-toolbar>
-                <span class="ql-formats">
-                    <button class="ql-bold"></button>
-                    <button class="ql-italic"></button>
-                    <button class="ql-underline"></button>
-                    <button class="ql-strike"></button>
-                </span>
-                <span class="ql-formats">
-                    <button class="ql-list" value="ordered"></button>
-                    <button class="ql-list" value="bullet"></button>
-                    <!-- <select class="ql-align">
-                        <option selected></option>
-                        <option value="center"></option>
-                        <option value="right"></option>
-                        <option value="justify"></option>
-                    </select> -->
-                </span>
-                <span class="ql-formats">
-                    <button class="ql-link"></button>
-                    <button class="ql-image"></button>
-                </span>
-            </div>
-        </quill-editor>
+        <!-- <label for="editor">Your message</label> -->
+        <quill-editor formControlName="message" minlength="1" #messageInput matInput [modules]="modules"></quill-editor>
+
         <!-- <textarea onkeydown="if (event.keyCode == 13) { this.form.requestSubmit(); return false; }" formControlName="message" minlength="1" #messageInput matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="10"></textarea> -->
         <button class="submit-btn" type="submit" mat-raised-button>Post</button>
     </form>
