--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,6 +55,18 @@ body {
     min-width: 230px;
 }
 
+// ######################################### Chat Messages - BEGIN
+.ql-snow .ql-editor img {
+    max-width: 260px !important;
+}
+
+.ql-editor p {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+// ######################################### Chat Messages - END
 // Material Icons
 @font-face {
     font-family: "Material Icons";
