fixed style of  quill-view and editor

--- a/src/app/components/channels/channels.component.scss
+++ b/src/app/components/channels/channels.component.scss
@@ -57,7 +57,6 @@
 }
 
 .message-container {
-    position: absolute;
     bottom: 20px;
     left: 0;
     width: 100%;
@@ -93,6 +92,7 @@
 
 .submit-btn {
     margin-top: 18px;
+    margin-bottom: 18px;
 }
 
 .d-none {
