workin on texteditor for dms

--- a/src/app/components/direct-message/direct-message.component.html
+++ b/src/app/components/direct-message/direct-message.component.html
@@ -55,11 +55,8 @@
         </ng-container>
     </div>
     <form [formGroup]="directMessageForm" (submit)="onSubmit()" class="message-container">
-        <mat-form-field appearance="fill">
-            <mat-label>Your Message</mat-label>
-            <textarea onkeydown="if (event.keyCode == 13) { this.form.requestSubmit(); return false; }" formControlName="directMessage" minlength="1" #messageInput matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="10"></textarea>
-        </mat-form-field>
-        <button [disabled]="messageInput.value == ''" [ngClass]="{ 'prim-btn': messageInput.value != '' }" type="submit" mat-raised-button>
+        <quill-editor formControlName="directMessage" minlength="1" #messageInput matInput [modules]="modules"></quill-editor>
+        <button class="submit-btn" class="submit-btn" type="submit" mat-raised-button>
             Post
         </button>
     </form>
