--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,8 +89,8 @@ quill-view {
 }
 
 .submit-btn {
-    margin-top: 18px;
-    margin-bottom: 18px;
+    margin-top: 18px !important;
+    // margin-bottom: 18px !important;
 }
 
 @media (max-width: 380px) {
