--- a/src/app/components/dialog-already-logged-in/dialog-already-logged-in.component.html
+++ b/src/app/components/dialog-already-logged-in/dialog-already-logged-in.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div mat-dialog-content>
-    <button class="sec-btn" routerLink="/main" (click)="this.dialogRef.close(); this.firestoreService.updateUser(this.authService.userData.uid)" mat-raised-button>
+    <button class="sec-btn" routerLink="/chat" (click)="this.dialogRef.close(); this.firestoreService.updateUser(this.authService.userData.uid)" mat-raised-button>
         <mat-icon>login</mat-icon>
         <span>Go to Chat</span>
     </button>
